2009-07-15  Kenichi Handa  <handa@m17n.org>

	* international/mule-cmds.el (set-language-environment-charset):
	If coding-system-charset-list returns `iso-2022' or `emacs-mule',
	ignore them.

	* language/misc-lang.el ("IPA"): Change coding systems to utf-8.
	Delete unibyte-display.

2009-07-15  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (kill-visual-line): Obey kill-whole-line (Bug#3695).

2009-07-15  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (deactivate-mark): Optional argument FORCE.
	(set-mark): Use deactivate-mark.

	* info.el (Info-search): No need to check transient-mark-mode
	before calling deactivate-mark.

	* select.el (x-set-selection): Doc fix.
	(x-valid-simple-selection-p): Allow buffer values.
	(xselect--selection-bounds): Handle buffer values.  Suggested by
	David De La Harpe Golden.

	* mouse.el (mouse-set-region, mouse-drag-track): Call
	copy-region-as-kill before setting the mark, to let
	select-active-regions work.

2009-06-28  David De La Harpe Golden  <david@harpegolden.net>

	* simple.el (deactivate-mark): If select-active-regions is
	non-nil, copy the selection data into a string.
	(activate-mark): If select-active-regions is non-nil, set the
	selection to the current buffer.
	(set-mark): Update selection if select-active-regions is non-nil.

	* select.el (x-valid-simple-selection-p): Allow buffer values.

2009-07-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (mail-user-agent): Default to the upwardly-UI-compatible
	and more featureful message-mode.

2009-07-14  Chong Yidong  <cyd@stupidchicken.com>

	* select.el (x-set-selection): Doc fix.
	(x-valid-simple-selection-p): Disallow selection data consisting
	of a list or cons of integers, since that is not used.
	(xselect--selection-bounds, xselect--int-to-cons): New functions.
	(xselect-convert-to-string, xselect-convert-to-length)
	(xselect-convert-to-filename, xselect-convert-to-charpos)
	(xselect-convert-to-lineno, xselect-convert-to-colno): Use them.
