@@ -1,3 +1,9 @@
+2009-07-15  Jari Aalto  <jari.aalto@cante.net>
+
+	* net/rcirc.el (rcirc): Use history variables.
+	(rcirc-server-name-history, rcirc-nick-name-history)
+	(rcirc-server-port-history): New variables.
+
 2009-07-15  Kenichi Handa  <handa@m17n.org>
 
 	* international/mule-cmds.el (set-language-environment-charset):
